# juice_shop_python

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: tests.yml
api/: __init__.py  client.py  factories.py
api/models/: __init__.py  base.py  register.py
archive/: page_objects_examples.py
data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: c18479d9a940a9c7.xml
data/test-cases/: 12fbe9f198d93581.json  196216c4068b8ba8.json  20cd31365d94de34.json  27ce22b39d30e937.json  3acc32222070790c.json  3b0480ec511991c6.json  431cd469bdf0bbbc.json  460bd123651a5fb.json  4c42e5b379709fcf.json  5f18128e8e3a8c11.json  6101b358c444b73f.json  624659d53ae0dfb8.json  6c0c37e2e0a6ec38.json  715a8569ce43d013.json  767287a7de9778ff.json  77ae0f62ab578bfc.json  (+8 more)
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
page_objects/: __init__.py  checkout_page.py  home_page.py  login_page.py  register_page.py
tests/: __init__.py  checkout_items.csv  checkout_page.py  conftest.py  home_page.py  login_page.py  page_objects_examples.py  register_page.py  test_checkout.py  test_example.py  test_exercises.py  test_num_py.py  test_swift_scheduling.py  test_with_api_user.py
widgets/: categories-trend.json  duration.json  executors.json  severity.json  status-chart.json  summary.json
