[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_glob = [".venv"]
known_first_party = ["page_objects"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --html=report.html --alluredir=allure-results --clean-alluredir"
testpaths = ["tests"]
